force-app/main/default/objects/ssot__RequiredSkill__dlm/fields/ssot__rel_1737626583875_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1737626583875_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RequiredSkill_CreatedById_map_User_I_rel</label>
    <referenceTo>ssot__User__dlm</referenceTo>
    <relationshipLabel>RequiredSkill_CreatedById_map_User_I_rel</relationshipLabel>
    <relationshipName>rel_1737626583875_end</relationshipName>
    <type>Lookup</type>
</CustomField>