force-app/main/default/objects/ssot__RequiredSkill__dlm/fields/ssot__rel_1741334704942_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1741334704942_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RequiredSkill_RelatedRecordId_map_Wo_rel</label>
    <referenceTo>ssot__WorkOrder__dlm</referenceTo>
    <relationshipLabel>RequiredSkill_RelatedRecordId_map_Wo_rel</relationshipLabel>
    <relationshipName>rel_1741334704942_end</relationshipName>
    <type>Lookup</type>
</CustomField>