force-app/main/default/objects/ssot__RequiredSkill__dlm/fields/ssot__RequiredSkill_SkillId_map_Skill_Id_N_1__c.field-meta.xml
<CustomField>
    <fullName>ssot__RequiredSkill_SkillId_map_Skill_Id_N_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RequiredSkill_SkillId_map_Skill_Id_N_1</label>
    <referenceTo>ssot__Skill__dlm</referenceTo>
    <relationshipLabel>RequiredSkill_SkillId_map_Skill_Id_N_1</relationshipLabel>
    <relationshipName>RequiredSkill_SkillId_map_Skill_Id_N_1</relationshipName>
    <type>Lookup</type>
</CustomField>