force-app/main/default/objects/ssot__RequiredSkill__dlm/fields/ssot__SkillPriorityNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__SkillPriorityNumber__c</fullName>
    <label>Skill Priority</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SkillPriorityNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>